--- a/public_html/styles/scss/_layout.scss
+++ b/public_html/styles/scss/_layout.scss
@@ -114,7 +114,7 @@ header{
         a{
             position: relative;
             display: block;
-            height: 100%;
+            /*height: 100%;*/
             width: 100%;
             line-height: 42px;
             padding: 0 27px;
@@ -156,7 +156,7 @@ header{
     float: left;
 
     width: auto;
-    height: 100%;
+    /*height: 100%;*/
     margin-right: 30px;
     img
     {
